2007-05-28  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.20.modules: added empathy (patch by Jaap A.
	Haitsma, closes: #440029)

2007-05-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: support for -- in run command even when
	not giving any parameters.

2007-05-28  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: support for running commands in specific
	module paths (closes: #356499)

2007-05-26  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-2.18.module: branched gtksourceview to
	gnome-2-18.

2007-05-21  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.20.modules: Added tinymail and modest, 
	as they are already in gnome-2.18.modules.

2007-05-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* jhbuild/config.py: Do not mix tabs and spaces.

2007-05-19  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-2.18.modules: Use gtk-engines-2-10
	branch.

2007-05-16  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.18.modules: Use pango-1-16 branch.

2007-05-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules:
	Up the cairo dep to 1.4.6 to get the latest and greatest.

2007-05-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules:
	Add build dependency on gnome-icon-theme for gnome-system-monitor
	module.

2007-05-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules:
	Add build dependencies on libgnomeprint for tomboy module.

2007-05-14  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.18.modules: Revert unwanted commit.

2007-05-14  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-suites-2.20.modules: Make sound-juicer depend
	on libmusicbrainz.

2007-05-14  William Jon McCann  <mccann@jhu.edu>

	* modulesets/freedesktop.modules: Use hicolor-icon-theme 0.10
	as we do in freedesktop-2.18.modules.

2007-05-07  Richard Hult  <richard@imendio.com>
