@@ -1,5 +1,11 @@
 2007-05-28  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/frontends/tinderbox.py: add links to to live.gnome.org
+	module issue page on failure in tinderbox output (patch by Craig
+	Keogh, closes: #437144)
+
+2007-05-28  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-2.20.modules: added empathy (patch by Jaap A.
 	Haitsma, closes: #440029)
 
